--- a/WebStoreGusev/Views/Employee/Details.cshtml
+++ b/WebStoreGusev/Views/Employee/Details.cshtml
@@ -1,43 +1,44 @@
 ﻿@model EmployeeViewModel
 
-@{
-    Layout = null;
+@{ 
+    //Layout = null;
     ViewData["Title"] = "Детали";
-}
+ }
 
-<!DOCTYPE html>
+<h1>Details</h1>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
-    <h1>Карточка сотрудника</h1>
+@*@Html.DisplayForModel()
+@Html.EditorForModel()*@
 
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Фамилия</th>
-                <th>Имя</th>
-                <th>Отчество</th>
-                <th>Возраст</th>
-                <th>Должность</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>@Model.Id</td>
-                <td>@Model.SurName</td>
-                <td>@Model.FirstName</td>
-                <td>@Model.Patronymic</td>
-                <td>@Model.Age</td>
-                <td>@Model.Position</td>
-            </tr>
-        </tbody>
-    </table>
-    <br />
-    <a asp-action="Index">< Назад</a>
-</body>
-</html>
+@*@Html.ActionLink("Назад к списку", "Index")*@
+
+<table class="table table-bordered">
+        <tr>
+            <td>Id</td>
+            <td>@Model.Id</td>
+        </tr>
+        <tr>
+            <td>Фамилия</td>
+            <td>@Model.SurName</td>
+        </tr>
+        <tr>
+            <td>Имя</td>
+            <td>@Model.FirstName</td>
+        </tr>
+        <tr>
+            <td>Отчество</td>
+            <td>@Model.Patronymic</td>
+        </tr>
+        <tr>
+            <td>Возраст</td>
+            <td>@Model.Age</td>
+        </tr>
+        <tr>
+            <td>Должность</td>
+            <td>@Model.Position</td>
+        </tr>
+</table>
+
+<div>
+    <a asp-action="Index">Назад к списку</a>
+</div>
