--- a/WebStoreGusev/Views/Employee/Index.cshtml
+++ b/WebStoreGusev/Views/Employee/Index.cshtml
@@ -1,36 +1,25 @@
 ﻿@model IEnumerable<EmployeeViewModel>
 
-@{
-    Layout = null;
-    ViewData["Title"] = "Index";
+@{ 
+    //Layout = null;
+    ViewData["Title"] = "Список сотрудников"; 
 }
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport"
-          content="width=device-width"
-          charset="utf-8" />
-
-    <title>Index</title>
-</head>
-
-<body>
-    <h1>Список сотрудников:</h1>
-
-    <table class="table table-bordered">
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.SurName</td>
-                <td>@item.FirstName</td>
-                <td>@item.Patronymic</td>
-                <td><a asp-action="Details" asp-route-id="@item.Id">Детали</a></td>
-                @*<td>
-                    @Html.ActionLink("Детали", "Details", new { id = item.Id })
-                </td>*@
-            </tr>
-        }
-    </table>
-</body>
-</html>
+@*<h1>Hello from my first view</h1>*@
+<hr />
+<a asp-action="Edit" class="btn btn-success">Добавить</a>
+<hr />
+<table class="table table-bordered">
+    @foreach (var item in Model)
+    {
+    <tr>
+        <td><a asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-edit"></i></a></td>
+        <td>@item.SurName</td>
+        <td>@item.FirstName</td>
+        <td>@item.Patronymic</td>
+        <td>@item.Age</td>
+        <td><a asp-action="Details" asp-route-id="@item.Id">Детали</a></td>
+        <td><a asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-cut"></i></a></td>
+    </tr>
+    }
+</table>
