--- a/WebStoreGusev/Views/Car/Index.cshtml
+++ b/WebStoreGusev/Views/Car/Index.cshtml
@@ -1,33 +1,22 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@model IEnumerable<WebStoreGusev.Models.CarViewModel>
+﻿@model IEnumerable<CarViewModel>
 
-@{ ViewData["Title"] = "Index"; }
+@{ ViewData["Title"] = "Список автомобилей"; }
 
-<!DOCTYPE html>
+<hr />
+<a asp-action="Edit" class="btn btn-success">Добавить</a>
+<hr />
 
-<html>
-<head>
-    <meta name="viewport"
-          content="width=device-width"
-          charset="utf-8" />
-
-    <title>Index</title>
-</head>
-
-<body>
-    <h1>Список автомобилей:</h1>
-
-    <table class="table table-bordered">
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.Company</td>
-                <td>@item.Model</td>
-                <td>@item.Price</td>
-                <td>RUB</td>
-                <td><a asp-action="Buy" asp-route-id="@item.Id">Купить</a></td>
-            </tr>
-        }
-    </table>
-</body>
-</html>
+<table class="table table-bordered">
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td><a asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-edit"></i></a></td>
+            <td>@item.Company</td>
+            <td>@item.Model</td>
+            <td>@item.Price</td>
+            <td>RUB</td>
+            <td><a asp-action="Buy" asp-route-id="@item.Id">Купить</a></td>
+            <td><a asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-cut"></i></a></td>
+        </tr>
+    }
+</table>
