--- a/WebStoreGusev/Views/Shared/_Header.cshtml
+++ b/WebStoreGusev/Views/Shared/_Header.cshtml
@@ -110,6 +110,7 @@
                             <li><a a asp-controller="Home" asp-action="NotFound">404</a></li>
                             <li><a a asp-controller="Home" asp-action="ContactUs">Contact</a></li>
                             <li><a a asp-controller="Employee" asp-action="Index">Employees</a></li>
+                            <li><a a asp-controller="Car" asp-action="Index">Cars</a></li>
                         </ul>
                     </div>
                 </div>
