--- a/WebStoreGusev/Views/Shared/_Header.cshtml
+++ b/WebStoreGusev/Views/Shared/_Header.cshtml
@@ -59,16 +59,19 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-sm-5">
                     <div class="shop-menu pull-right">
                         <ul class="nav navbar-nav">
                             <li><a href="#"><i class="fa fa-user"></i> Account</a></li>
                             <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
                             <li><a asp-controller="Home" asp-action="Checkout"><i class="fa fa-crosshairs"></i> Checkout</a></li>
                             <li><a asp-controller="Home" asp-action="Cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-                            <li><a asp-controller="Home" asp-action="Login"><i class="fa fa-lock"></i> Login</a></li>
                         </ul>
                     </div>
+                </div>
+                <div class="col-sm-3">
+                    @*@await Component.InvokeAsync("LoginLogout")*@
+                    <vc:login-logout></vc:login-logout> @*<=> LoginLogout*@
                 </div>
             </div>
         </div>
@@ -110,7 +113,6 @@
                             <li><a a asp-controller="Home" asp-action="NotFound">404</a></li>
                             <li><a a asp-controller="Home" asp-action="ContactUs">Contact</a></li>
                             <li><a a asp-controller="Employee" asp-action="Index">Employees</a></li>
-                            <li><a a asp-controller="Car" asp-action="Index">Cars</a></li>
                         </ul>
                     </div>
                 </div>
